# OpenCVNativeInPaint

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/yrmultimediaco/opencvnativeinpaint/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  image_inpaint.cpp  native-lib.cpp  opencv-utils.cpp  opencv-utils.h
app/src/main/cpp/benchmarks/: patch.cpp
app/src/main/cpp/examples/: inpaint_image_criminisi.cpp  patch_match.cpp
app/src/main/cpp/inc/inpaint/: criminisi_inpainter.h  patch.h  patch_match.h
app/src/main/cpp/src/: criminisi_inpainter.cpp  patch_match.cpp  template_match_candidates.cpp
app/src/main/cpp/tests/: criminisi_inpainter.cpp  gradient.cpp  integral.cpp  patch.cpp  patch_match.cpp  template_match_candidates.cpp
app/src/main/java/com/example/yrmultimediaco/opencvnativeinpaint/: BrushPreviewView.java  CircularOverlayDrawable.java  DrawingView.java  InpaintActivity.java  MainActivity.java  ResultImage.java  TouchPointsHolder.java
app/src/main/res/drawable/: background_dialog.xml  background_progress.xml  circular_progress_bar.xml
app/src/main/res/layout/: activity_inpaint.xml  activity_main.xml  activity_result_image.xml  layout_reset_process.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/yrmultimediaco/opencvnativeinpaint/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
